<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Base app strings-->
    <string name="app_name">Hakana</string>
    <string name="fast_quiz_title">Fast quiz</string>

    <!--Menu drawer-->
    <string name="drawer_menu_kana">Kana</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_test">Tests</string>
    <string name="drawer_menu_vocab">Vocabulary</string>

    <!--Fragment titles-->
    <string name="hiragana">Hiragana</string>

    <!--Kana fragment strings-->
    <!--menu-->
    <string name="kana_scripts">Kana scripts</string>
    <string name="diacritics">Diacritics</string>

    <string name="diacritics_seion">seion</string>
    <string name="diacritics_dakuon">dakuon</string>
    <string name="diacritics_youon">youon</string>
    <string name="unknown_fragment">Unknown fragment</string>

</resources>
